# causal-ml-final-market-equilibrium-as-interference

./: .gitignore  Final Project - Market Equilibrium as Interference.bib  README.md  _quarto.yaml  market-equilibrium-as-interference.html  market-equilibrium-as-interference.qmd  method-implementation-mvp.qmd  mvp-simulation-v2.qmd  mvp-simulation-v3.py  mvp-simulation.qmd  pyproject.toml
.github/workflows/: docs.yml
data/: equilibrium_by_demand_and_payment.csv  local_vs_global_experiment.csv
demo/: __init__.py  pyproject.toml
demo/figures/: allocations_by_allocation_function_and_demand.py  general_vs_market_interference_figure.py  utils.py
demo/mvp/: __init__.py  allocation.py  demand.py  market_platform.py  supplier.py  utils.py
docs/: README.md  conf.py  index.rst
docsrc/: mkdocs_config.yml
docsrc/content/: index.md
mvp/: __init__.py  supplier.py
notebooks/: DEPRECATED_congestion_pricing_simulation.qmd  _macros.lua  _macros.tex  _quarto.yaml  experimenting_in_equilibrium_notation.qmd  method-implementation-mvp.qmd  test_supplier.qmd  tmp.qmd
scripts/: build_docs.py  convert_math_to_roles.py  diagnose_modulenotfound_error.py  fix_docstrings.py
src/congestion_pricing/: road.py
src/demo/: __init__.py  allocation.py  demand.py  experiment_results.py  find_equilibrium.py  finite_market.py  global_experimentation.py  local_experimentation.py  marginal_response.py  market.py  market_platform.py  platform_utility.py  pyproject.toml  revenue.py  simulation.py  supplier.py  utils.py
src/demo/figures/: __init__.py  allocations_by_allocation_function_and_demand.py  general_vs_market_interference_figure.py  local_vs_global_experimentation.py  market_behavior_by_payment.py  market_equilibrium_by_demand_and_payment.py  (+1 more)
src/electricity_market/: _macros.tex  _quarto.yaml  electricity_market_simulation.qmd
src/figures/: __init__.py  allocations_by_allocation_function_and_demand.py  market_behavior_by_payment.py  market_equilibrium_by_demand_and_payment.py
src/mvp/: __init__.py  allocation.py  find_equilibrium.py  market_platform.py  mean_field.py  pyproject.toml  test_mvp.py
src/simulations/: equilibrium_by_demand_and_payment.py  simple_market_simulation.py
tests/: test_baseline_global_experimentation.py  test_demo.py  test_experiment_helpers.py  test_global_experimentation.py  test_mvp.py
(+21 files in other folders)
