[project]
name = "final-project-interference-market-equilibrium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "plotnine>=0.15.2",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "quarto>=0.1.0",
    "mvp"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mvp = { path = "src/mvp", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/mvp"]