[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "plotnine>=0.15.2",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3"
]

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"}
]
test = [
    "pytest>=9.0.2",
]
lint = [
    "ruff>=0.14.10",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]
notebooks = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "quarto>=0.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
default-groups = "all"
